--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                                 <li><span>2024</span><br>Associate In Software Development at Community College Of Allegheny County</li>
                                 <li><span>2022</span><br>Certificate In Software Development</li>
                                 <li><span>2015</span><br>Bachelor in Business Administration</li>
+                                <li><span>2015</span><br>AWS Cloud Practitioner Certificate</li>
                             </ul>
                         </div>
 
